Fix pagination X z-index

--- a/frontend/app/styles/pages/_blog.scss
+++ b/frontend/app/styles/pages/_blog.scss
@@ -81,6 +81,7 @@
     top: 20px;
     right: 20px;
     padding: 0;
+    z-index: 10000;
     li {
       display: inline-block;
       a {
